Closed Bug 43575 Opened 26 years ago Closed 26 years ago

Replying to a message with one sender fails to populate To Field

Categories

(MailNews Core :: Composition, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mscott, Assigned: bugzilla)

References

Details

(Whiteboard: [dogfood+][nsbeta2+])

Note: i believe this problem is different from the earlier problem i field today with us dropping many of the recipients when replying to a message. In a build from 9:30 tonight, if i reply to a message, the to field is not being populated with the sender. I have to enter it by hand.
Keywords: nsbeta2
Happens with today's commercial linux build and mac build, too.
OS: Windows NT → All
Hardware: PC → All
QA Contact: lchiang → laurel
Putting on [nsbeta2+] radar for beta2 fix.
Whiteboard: [nsbeta2+]
Status: NEW → ASSIGNED
Target Milestone: --- → M17
Severity: normal → major
Also after selecting a AB card in AB window and clicking on 'New Msg' button should populate the To field in compose window.
Severity: major → normal
*** Bug 43649 has been marked as a duplicate of this bug. ***
adding myself to cc
IMO, not being able to just hit REPLY is a real pain. Typing email addresses is error prone. I'm nominating for dogfood. This is too basic to not work.
Keywords: dogfood
David, for some reason, the textfield loose its content either when we pre filed the addressing widget or when you scroll the recipients list. Any idea?
Severity: normal → major
reassigning to rods and cc'ing ducarroz Rod, I did a bunch of pulls and backing out and found that when I back out your changes to nsGfxTextControlFrame2.cpp r =1.40 and nsGfxTextControlFrame.h r=1.20 from 6/22 19:30 that this bug goes away. If someone has a build, could they verify that this is the case and Rod any help you can give on this bug which I'm pretty sure will be a dogfood blocker, will be appreciated.
Assignee: ducarroz → rods
Status: ASSIGNED → NEW
This bug makes the app really hard to use. I have to retype the recipients :-( Marking dogfood+
Whiteboard: [nsbeta2+] → [dogfood+][nsbeta2+]
I am trying to take a look at this but mozilla keeps crashing on me. I really don't see how my changes are keeping the values from being set. My changes had to do with the sizing of the GfxText only. And the sizing of GfxText in NavQuirks mode (mostly). Putterman, what else did you back out in order to back out my changes?
Status: NEW → ASSIGNED
As soon my build is done, I will back out nsGfxTextControlFrame2.cpp/.h to confirm if they are really the culprit.
*** Bug 43830 has been marked as a duplicate of this bug. ***
Rods, I took a fresh build from this morning, pull back nsGfxTextControlFrame2.cpp to rev 1.39 (cvs update -r "1.39" nsGfxTextControlFrame2.cpp)and pull back nsGfxTextControlFrame2.h to rev 1.19 (cvs update -r "1.19" nsGfxTextControlFrame2.h). Then I had to reply patch 1.41 into nsGfxTextControlFrame2.cpp in order to make this stuff compile again. With that, I don't see anymore the problem.
Rod I had pulled a tree by date back to 6/22 at 20:58. This bug existed then. Previousy I had pulled a tree by date back to 6/22 at 18:00 and the bug was there. So I knew the checkin was during those 3 hours. Then I started backing out files that looked suspicious. It wasn't until I backed out the changes I mentioned before that this bug went away (I put back the other changes I had backed out).
*** Bug 43855 has been marked as a duplicate of this bug. ***
Blocks: 43468
Keywords: mostfreq
Is anybody else seeing an assert in nsAreadableString when they hit reply on a message?
Rods, the easy and quick way to reproduce this problem is to use mailto url: in the browser window, just type: mailto:rods@netscape.com You can also start mozilla with the following command line: mozilla -compose to=rods@netscape.com in bopth case, you should get a compose window with a recipient already prefiled to rods@netscape.com
Blocks: 43679
I am taking back this bug as I have a fix for it (thanks to David Hyatt): Index: src/nsGfxTextControlFrame2.cpp =================================================================== RCS file: /cvsroot/mozilla/layout/html/forms/src/nsGfxTextControlFrame2.cpp,v retrieving revision 1.43 diff -r1.43 nsGfxTextControlFrame2.cpp 1353c1353 < if (eReflowReason_Initial == aReflowState->reason) --- > if (mState & NS_FRAME_FIRST_REFLOW)
Assignee: rods → ducarroz
Status: ASSIGNED → NEW
Fix checked in
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
OK using jun27 commercial build, linux rh6.0, NT 4.0 and mac OS 9.0 OK for reply to a message, prefills OK. OK for new message to newsgroup, prefills OK. OK for new message from AB window, card selected, prefills OK.
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.