Fix for bug 43575. Back out a line that Rods accidently change while checkin rev 1.40 R=hyatt